# NDM

./: .gitignore  generate_enterprise_report.py  ndm_backend.spec
chrome_extension/: background.js  content.js  keep_voice_alive.js  manifest.json
docs/: NDM_Enterprise_Report.md  get_report_info.py  md_to_pdf_reportlab.py
gmail_lookup_service/: README.md  app_paths.py  data.db  db.py  gmail_client.py  main.py  ndm_backend.py  ndm_backend.spec  recording.py  requirements.txt
gmail_lookup_service/static/: ui.css  ui.js
gmail_lookup_service/templates/: ui.html
ndm_desktop/: package-lock.json  package.json
ndm_desktop/scripts/: build_backend.ps1
ndm_desktop/src-tauri/: Cargo.toml  tauri.conf.json
ndm_desktop/src-tauri/icons/: icon.icns
ndm_desktop/src-tauri/src/: main.rs
ndm_oncall/: README.md  db.py  gmail_client.py  main.py  ndm_backend.py  ndm_backend.spec  recording.py  requirements.txt
ndm_oncall/static/: machaa_portrait.css  machaa_portrait.js  ui.css  ui.js  war_room.css  war_room_manager.js  war_room_pages.js
ndm_oncall/templates/: machaa_mode_portrait.html  ui.html  war_room_cheats.html  war_room_resume.html
ndm_research/: README.md  db.py  main.py
ndm_research/static/: research.css  research.js
ndm_research/templates/: research.html  workspace.html
shared/: app_paths.py  profile_store.py  sqlite_utils.py
shared/static/: profile.js
