[package]
name = "ndm_desktop"
version = "0.1.0"
description = "NDM Desktop"
authors = ["NDM"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
tauri = { version = "1.5", features = ["global-shortcut", "process-command-api"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
